[project]
name = "ddpg"
version = "0.2.0"
description = "DDPG (ASHRAE-only edition) for tabular energy prediction framed as RL/bandit."
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "matplotlib",
    "pandas",
    "scikit-learn",
    "scipy",
    "torch",
    "deep-forest"
]
